tests/aster/x/hs/basic_compare.out

/workspace/mochi/tests/aster/x/hs/basic_compare.hs:7:8: error:
    Unexpected do block in function application:
        do print (a)
    Suggested fixes:
      • Use parentheses.
      • Perhaps you intended to use BlockArguments
  |
7 | main = do print (a)
  |        ^^^^^^^^^^^^
